fix: center align the notification component

--- a/styles/app.global.less
+++ b/styles/app.global.less
@@ -44,6 +44,15 @@ body::-webkit-scrollbar-corner {
 .ant-notification {
   width: 80%;
   margin-right: 10%;
+  > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.ant-notification-notice {
+  margin-left: revert;
 }
 
 .ant-input-group {
